--- a/src/choose_the_schedule_for_the_next_step_error.html
+++ b/src/choose_the_schedule_for_the_next_step_error.html
@@ -102,79 +102,6 @@
 						</div>
 						<div class="timesheet__right">
 							<a href="#" class="btn btn_bord btn_little">ЗМІНИТИ РОЗКЛАД</a>
-							<!-- popup -->
-							<div class="popup js-popup is-active">
-								<div class="popup__in">
-									<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
-									<div class="plan js-plan">
-										<form action="">
-											<div class="title-medium">Обрати розклад на 3 степ</div>
-											<div class="plan__wrap">
-												<div class="plan__left">
-													<div class="title-bord">1 заняття (ПН-СР)</div>
-													<ul class="plan__days">
-														<li class="is-active"><a href="#">ПН</a></li>
-														<li><a href="#">вт</a></li>
-														<li><a href="#">ср</a></li>
-													</ul>
-												</div>
-												<div class="plan__right">
-													<div class="title-bord">2 заняття (ЧТ-СБ)</div>
-													<ul class="plan__days">
-														<li><a href="#">чт</a></li>
-														<li class="is-active"><a href="#">пт</a></li>
-														<li><a href="#">сб</a></li>
-													</ul>
-												</div>
-											</div>
-											<div class="plan__block is-active">
-												<div class="plan__left">
-													<!-- notif -->
-													<div class="notif">
-														<div class="notif__wrap">
-															<div class="notif__img">
-																<div class="notif__icon">
-																	<img src="img/svg/notification.svg" alt="img">
-																</div>
-															</div>
-															<div class="notif__text">
-																<p>Нажаль, ти не можеш записатись на цей день, бо всі місця зайняті.  </p>
-																<p>Ти можеш обрати інший день!  </p>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="plan__right">
-													<label class="radiobutton">
-														<input type="radio" name="second">
-														<span>ЧТ, 10.00–11.00</span>
-														<span class="radiobutton__text">Лишилось 4 місця</span>
-													</label>
-													<label class="radiobutton">
-														<input type="radio" name="second">
-														<span>ПТ, 11.00–12.00</span>
-														<span class="radiobutton__text">Лишилось 4 місця</span>
-													</label>
-													<label class="radiobutton">
-														<input type="radio" name="second">
-														<span>ПТ, 18.00–19.00</span>
-														<span class="radiobutton__text">Лишилось 4 місця</span>
-													</label>
-													<label class="radiobutton">
-														<input type="radio" name="second">
-														<span>СБ, 10.00–11.00</span>
-														<span class="radiobutton__text">Лишилось 4 місця</span>
-													</label>
-												</div>
-											</div>
-											<div class="plan__butt">
-												<button class="btn btn_bord js-plan-submit" type="submit">ГОТОВО</button>
-												<button class="cancel js-plan-cancel" type="button">ВІДМІНИТИ</button>
-											</div>
-										</form>
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
 					<div class="timesheet__row">
@@ -380,5 +307,84 @@
 </div>
 <!-- END out--> 
 //=include partials/footer.html 
+<!-- popup -->
+<div class="popup js-popup is-active">
+	<div class="popup__in">
+		<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
+		<div class="plan js-plan">
+			<form action="">
+				<div class="title-medium">Обрати розклад на 3 степ</div>
+				<div class="plan__wrap">
+					<div class="plan__left">
+						<div class="title-bord">1 заняття (ПН-СР)</div>
+						<ul class="plan__days">
+							<li class="is-active"><a href="#">ПН</a></li>
+							<li><a href="#">вт</a></li>
+							<li><a href="#">ср</a></li>
+						</ul>
+						<div class="plan__block is-active">
+							<!-- notif -->
+							<div class="notif">
+								<div class="notif__wrap">
+									<div class="notif__img">
+										<div class="notif__icon">
+											<img src="img/svg/notification.svg" alt="img">
+										</div>
+									</div>
+									<div class="notif__text">
+										<p>Нажаль, ти не можеш записатись на цей день, бо всі місця зайняті.  </p>
+										<p>Ти можеш обрати інший день!  </p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="plan__right">
+						<div class="title-bord">2 заняття (ЧТ-СБ)</div>
+						<ul class="plan__days">
+							<li><a href="#">чт</a></li>
+							<li class="is-active"><a href="#">пт</a></li>
+							<li><a href="#">сб</a></li>
+						</ul>
+						<div class="plan__block is-active">
+							<label class="radiobutton">
+								<input type="radio" name="second">
+								<span>
+									<span>ЧТ, 10.00–11.00</span>
+									<span class="radiobutton__text">Лишилось 4 місця</span>
+								</span>
+							</label>
+							<label class="radiobutton">
+								<input type="radio" name="second">
+								<span>
+									<span>ПТ, 11.00–12.00</span>
+									<span class="radiobutton__text">Лишилось 4 місця</span>
+								</span>
+							</label>
+							<label class="radiobutton">
+								<input type="radio" name="second">
+								<span>
+									<span>ПТ, 18.00–19.00</span>
+									<span class="radiobutton__text">Лишилось 4 місця</span>
+								</span>
+							</label>
+							<label class="radiobutton">
+								<input type="radio" name="second">
+								<span>
+									<span>СБ, 10.00–11.00</span>
+									<span class="radiobutton__text">Лишилось 4 місця</span>
+								</span>
+							</label>
+						</div>
+					</div>
+				</div>
+				<div class="plan__butt">
+					<button class="btn btn_bord js-plan-submit" type="submit">ГОТОВО</button>
+					<button class="cancel js-plan-cancel" type="button">ВІДМІНИТИ</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
 </body>
 </html>
