--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
 				<p>м. Пл. Льва Толстого</p>
 				<p>ул. Льва Толстого, 9а, 3-й этаж</p>
 				<p>(напротив парка Шевченко)</p>
-				<p><a class="open-map" href="#">Посмотреть на карте</a></p>
+				<p><a class="open-map" href="map.html" target="_blank">Посмотреть на карте</a></p>
 				<div class="label">Телефон</div>
 				<p>(044) 232-89-71, (044) 289-08-38</p>
 				<label for="phone" class="label">Заказать звонок:</label>
