--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,33 @@
 	<!-- top -->
 	<section class="top js-top js-yellow">
 		//=include partials/header-home.html 
-		<div class="top__in">
+		<div class="top__text">
+			<div class="text">
+			  <p>
+			    <span class="word">ТВОЯ</span>
+			    <span class="word">your</span>
+			  </p>
+			</div>
+			<div class="text">
+			  <p>
+			    <span class="word">ДОСТУПНАЯ</span>
+			    <span class="word">low cost</span>
+			  </p>
+			</div>
+			<div class="text">
+			  <p>
+			    <span class="word">ШКОЛА</span>
+			    <span class="word">school </span>
+			  </p>
+			</div>
+			<div class="text">
+			  <p>
+			    <span class="word">АНГЛИЙСКОГО ЯЗЫКА!</span>
+			    <span class="word">of english</span>
+			  </p>
+			</div>
+		</div>
+		<div class="top__in"> 
 			<h1>ТВОЯ ДОСТУПНАЯ ШКОЛА АНГЛИЙСКОГО ЯЗЫКА!</h1>
 			<!-- video -->
 			<div class="video js-video">
