--- a/src/student_step3.html
+++ b/src/student_step3.html
@@ -5,14 +5,16 @@
 	<!-- sidebar -->
 	<div class="sidebar js-sidebar">
 		<!-- logo -->
-		<a href="#" class="logo is-student"></a>
+		<div class="logo-wrap">
+			<a href="#" class="logo is-student"></a>
+		</div>
 		<button class="nav-btn js-open-nav" type="button"><span></span></button>
 		<div class="nav-block js-nav">
 			<!-- outlet -->
 			<div class="outlet">
 				<a href="#" class="outlet__link"><span>Вихід</span></a>
 				<a href="#" class="outlet__link"><span>Змінити пароль</span></a>
-			</div>
+			</div> 
 			<ul class="lang">
 				<li><a href="#">en</a></li>
 				<li class="is-active"><a href="#">ua</a></li>
@@ -104,6 +106,11 @@
 							<img src="img/svg/step-icon2.svg" alt="img">
 						</div>
 					</a>
+					<a href="#" class="step-ico">
+						<div class="icon">
+							<img src="img/svg/step-icon3.svg" alt="img">
+						</div>
+					</a>
 				</div>
 			</div>
 		</header>
@@ -118,6 +125,11 @@
 				<a href="#" class="step-ico is-step-ico-2">
 					<div class="icon">
 						<img src="img/svg/step-icon2.svg" alt="img">
+					</div>
+				</a>
+				<a href="#" class="step-ico">
+					<div class="icon">
+						<img src="img/svg/step-icon3.svg" alt="img">
 					</div>
 				</a>
 			</div>
