--- a/src/choose_the_schedule_for_the_next_step_error.html
+++ b/src/choose_the_schedule_for_the_next_step_error.html
@@ -5,7 +5,9 @@
 	<!-- sidebar -->
 	<div class="sidebar js-sidebar">
 		<!-- logo -->
-		<a href="#" class="logo is-student"></a>
+		<div class="logo-wrap">
+			<a href="#" class="logo is-student"></a>
+		</div>
 		<!-- numb-step -->
 		<div class="numb-step">
 			<div class="numb-step__text">степ</div>
