--- a/src/student_step2.html
+++ b/src/student_step2.html
@@ -96,7 +96,7 @@
 				<div class="header__icons is-hide-mobile">
 					<a href="#" class="step-ico">
 						<div class="icon">
-							<img src="img/svg/step-icon1.svg" alt="img">
+							<img src="img/svg/step-icon1-last.svg" alt="img">
 						</div>
 					</a>
 				</div>
@@ -107,7 +107,7 @@
 			<div class="step-icons">
 				<a href="#" class="step-ico">
 					<div class="icon">
-						<img src="img/svg/step-icon1.svg" alt="img">
+						<img src="img/svg/step-icon1-small.svg" alt="img">
 					</div>
 				</a>
 			</div>
