--- a/src/student_step4_2.html
+++ b/src/student_step4_2.html
@@ -98,22 +98,22 @@
 				<div class="header__icons is-hide-mobile">
 					<a href="#" class="step-ico">
 						<div class="icon">
-							<img src="img/svg/step-icon1.svg" alt="img">
+							<img src="img/svg/step-icon1-last.svg" alt="img">
 						</div>
 					</a>
 					<a href="#" class="step-ico">
 						<div class="icon">
-							<img src="img/svg/step-icon2.svg" alt="img">
+							<img src="img/svg/step-icon2-last.svg" alt="img">
 						</div>
 					</a>
 					<a href="#" class="step-ico">
 						<div class="icon">
-							<img src="img/svg/step-icon3.svg" alt="img">
+							<img src="img/svg/step-icon3-last.svg" alt="img">
 						</div>
 					</a>
 					<a href="#" class="step-ico">
 						<div class="icon">
-							<img src="img/svg/step-icon4.svg" alt="img">
+							<img src="img/svg/step-icon4-last.svg" alt="img">
 						</div>
 					</a>
 				</div>
@@ -124,22 +124,22 @@
 			<div class="step-icons">
 				<a href="#" class="step-ico">
 					<div class="icon">
-						<img src="img/svg/step-icon1.svg" alt="img">
-					</div>
-				</a>
-				<a href="#" class="step-ico is-step-ico-2">
-					<div class="icon">
-						<img src="img/svg/step-icon2.svg" alt="img">
-					</div>
-				</a>
-				<a href="#" class="step-ico is-step-ico-3">
-					<div class="icon">
-						<img src="img/svg/step-icon3.svg" alt="img">
+						<img src="img/svg/step-icon1-small.svg" alt="img">
 					</div>
 				</a>
 				<a href="#" class="step-ico">
 					<div class="icon">
-						<img src="img/svg/step-icon4.svg" alt="img">
+						<img src="img/svg/step-icon2-small.svg" alt="img">
+					</div>
+				</a>
+				<a href="#" class="step-ico">
+					<div class="icon">
+						<img src="img/svg/step-icon3-small.svg" alt="img">
+					</div>
+				</a>
+				<a href="#" class="step-ico">
+					<div class="icon">
+						<img src="img/svg/step-icon4-small.svg" alt="img">
 					</div>
 				</a>
 			</div>
