--- a/src/popup_from_the_first_to_the_second_step.html
+++ b/src/popup_from_the_first_to_the_second_step.html
@@ -318,7 +318,7 @@
 			<div class="popup__gratters">Вітаємо, з успішним закінченням Степа 1! </div>
 			<div class="popup__icon">
 				<div class="step-ico">
-					<div class="icon">
+					<div class="icon icon_mod">
 						<img src="img/svg/step-icon1_big.svg" alt="img">
 					</div>
 				</div>
