--- a/src/teacher_groups.html
+++ b/src/teacher_groups.html
@@ -416,6 +416,9 @@
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="l-col2">
+						
 						<h5 class="title-little">Четвер ‒ Субота</h5>
 						<!-- accord -->
 						<div class="accord js-accord">
@@ -776,8 +779,8 @@
 							<div class="accord__block js-accord-block">
 								<!-- table -->
 								<div class="table is-appraisal is-numb">
-									<div class="table__row">
-										<div class="table__name"><a href="#">Борис Васюк</a></div>
+									<div class="table__row"> 
+										<div class="table__name"><a href="#">Борис Васюк Борис Васюк</a></div>
 										<div class="table__point">
 											<div class="table__col">
 												<input class="point" placeholder="балл">
@@ -791,7 +794,7 @@
 										</div>
 									</div>
 									<div class="table__row">
-										<div class="table__name"><a href="#">Борис Васюк</a></div>
+										<div class="table__name"><a href="#">БорисВасюкБорисВасюкБорисВасюкБорисВасюк</a></div>
 										<div class="table__point">
 											<div class="table__col">
 												<input class="point" placeholder="балл">
