--- a/src/change_password_popup.html
+++ b/src/change_password_popup.html
@@ -2986,12 +2986,12 @@
 			<h3 class="title-medium">Змінити <br>пароль</h3>
 			<form action="">
 				<div class="row">
-					<label for="phone" class="label">Старий (номер телефону)</label>
-					<input type="text" name="phone" id="phone" class="input js-input-phone">
+					<label for="password1" class="label">Введіть новий пароль</label>
+					<input type="password" name="password" id="password1" class="input js-input-password">
 				</div>
 				<div class="row">
-					<label for="password" class="label">Новий пароль</label>
-					<input type="passwod" name="password" id="password" class="input js-input-password" placeholder="_______">
+					<label for="password2" class="label">Підтвердіть новий пароль</label>
+					<input type="password" name="password" id="password2" class="input js-input-password">
 				</div>
 				<div class="row">
 					<button class="btn" type="submit">ЗМІНИТИ</button>
